--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/cli": "^2.30.3",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
