--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "gapi-script": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "postcss": "^8.4.14",
     "react": "18.1.0",
